crates/pbps-cli/tests/snapshots/diagnostic_snapshots__foreign_key_help.snap
---
source: crates/pbps-cli/tests/diagnostic_snapshots.rs
expression: human.snapshot()
---
exit: 2
--- stdout ---
No identity file yet at `./schema.ids.json`; run `pbps plan` to create it.
--- stderr ---
pbps::load::semantic

  × invalid foreign key target: missing `(`
   ╭─[./schema/dbo.t.yml:8:17]
 7 │     columns: [id]
 8 │     references: dbo.region
   ·                 ─────┬────
   ·                      ╰── missing `(`
   ╰────
  help: the format is `schema.table(column)`; separate multiple columns with
        commas

--- end ---
