crates/pbps-cli/tests/snapshots/diagnostic_snapshots__multiple_diagnostics.snap
---
source: crates/pbps-cli/tests/diagnostic_snapshots.rs
expression: human.snapshot()
---
exit: 2
--- stdout ---
No identity file yet at `./schema.ids.json`; run `pbps plan` to create it.
--- stderr ---
pbps::load::semantic

  × invalid type: unclosed parenthesis in type `decimal(18, 2`
   ╭─[./schema/a.yml:7:11]
 6 │   solde:
 7 │     type: "decimal(18, 2"
   ·           ───────┬───────
   ·                  ╰── unclosed parenthesis in type `decimal(18, 2`
 8 │     nullable: false
   ╰────

pbps::load::semantic

  × invalid foreign key target: missing `(`
   ╭─[./schema/z.yml:8:17]
 7 │     columns: [id]
 8 │     references: dbo.region
   ·                 ─────┬────
   ·                      ╰── missing `(`
   ╰────
  help: the format is `schema.table(column)`; separate multiple columns with
        commas

--- end ---
