crates/pbps-cli/tests/snapshots/diagnostic_snapshots__plan_io.snap
---
source: crates/pbps-cli/tests/diagnostic_snapshots.rs
expression: human.snapshot()
---
exit: 1
--- stdout ---
--- stderr ---
pbps::load::io

  × cannot read `./schema/dbo.t.yml`
  ╰─▶ stream did not contain valid UTF-8

error: the declarations have 1 problem(s)
--- end ---
