crates/pbps-cli/tests/snapshots/diagnostic_snapshots__plan_yaml.snap
---
source: crates/pbps-cli/tests/diagnostic_snapshots.rs
expression: human.snapshot()
---
exit: 1
--- stdout ---
--- stderr ---
pbps::load::yaml

  × there is a problem with the YAML in `./schema/dbo.t.yml`
  │ 
  │ error: line 2 column 10: unclosed bracket '['
  │  --> <input>:2:10
  │   |
  │ 1 | table: dbo.t
  │ 2 | columns: [
  │   |          ^ unclosed bracket '['

error: the declarations have 1 problem(s)
--- end ---
